# jemris

./: CMakeLists.txt  README.md
GJEMRIS_paper/: ArtifactExamples_JEMRISpaper.ipynb  GeomPhantom_tests.ipynb  LiverPhantom_Dixon_tests.ipynb  utils.py  utils_liver_phantom.py
GJEMRIS_paper/geom_phantom_data/: create_birdcage_coils.py  create_geometrical_phantom.py
GJEMRIS_paper/geom_phantom_data/simulation_setup/: Sag_FOV60_SS_r1.3_coil_1.h5  Sag_FOV60_SS_r1.3_coil_2.h5  Sag_FOV60_SS_r1.3_coil_3.h5  Sag_FOV60_SS_r1.3_coil_4.h5  coil_sag_FOV60_SS_.xml  ellips_SS_5.h5  signals_cs_ellipSS_linTy10.h5  simu_cs_linTy10.xml
GJEMRIS_paper/geom_phantom_data/speed_benchmark_data/: Benchmarking_v4_cleaned.csv  T1w_DRIVE_li_sag64_Korder.txt  signals_2Atoms_mRx_2mln_Ty10_GJv4.2.h5  signals_2Atoms_mRx_2mln_Ty10_v2.9MPI24.h5  signals_2Atoms_uni_2K_Ty10.h5  signals_2Atoms_uni_2K_Ty10_MPI72.h5  signals_2Atoms_uni_v2.9MPI24.h5  signals_FS_ellips_mRx_2K_AllTy10_GJv4.2.h5  signals_FS_ellips_mRx_2K_AllTy10_GJv4.2_2.h5  signals_FS_ellips_mRx_2K_AllTy10_GJv4.2_DPnew.h5  signals_FS_ellips_mRx_2K_AllTy10_v2.9MPI24_1.h5  signals_FS_ellips_mRx_2K_AllTy10_v2.9MPI24_2.h5  signals_FS_ellips_mRx_2M_AllTy10_GJv4.2SP.h5  signals_FS_ellips_mRx_2M_AllTy10_GJv4.2_DP_1.h5  signals_FS_ellips_mRx_2M_AllTy10_GJv4.2_SPnew copy.h5  signals_FS_ellips_mRx_2M_AllTy10_GJv4.2_SPnew_2.h5  signals_FS_ellips_mRx_2M_AllTy10_GJv4.2_v2.9SP_3.h5  signals_FS_ellips_mRx_2M_AllTy10_v2.9MPI24_2.h5  signals_FS_ellips_mRx_N500_AllTy10_GJv4.2_DP_1.h5  signals_FS_ellips_mRx_N500_AllTy10_v2.9MPI24_1.h5  signals_FS_ellips_mRx_N500_AllTy10_v2.9MPI24_2.h5  signals_FS_ellips_mRx_N500_AllTy10_v2.9MPI24_3.h5  signals_FS_ellips_mRx_N500_v2.9MPI24_1.h5  signals_FS_ellips_mRx_N50_AllTy10_GJv4.2_DP_1.h5  signals_FS_ellips_mRx_N50_AllTy10_v2.9MPI24_1.h5  signals_FS_ellips_mRx_N50_AllTy10_v2.9MPI24_3.h5  signals_mRx_N500_2SE_GJ_DP_3.h5  signals_mRx_N500_2SE_MPI.h5  signals_mRx_N500_2SE_MPI_2.h5
GJEMRIS_paper/liver_phantom_data/: mpfwPh_Korder_firstEcho.txt
GJEMRIS_paper/liver_phantom_data/DUKE_masks/: mask_Cerebellum.mat  mask_Cerebrospinal_fluid.mat  mask_Cerebrum_white_matter.mat  mask_Kidney.mat  mask_Liver.mat  mask_Male_reproductive_system.mat  mask_Muscle.mat  mask_Other_tissue.mat  mask_Skull.mat
GJEMRIS_paper/liver_phantom_data/Liver_V14_cosTy3_2/: LiverV13_Sum_cosTy3_2_imgs.npy  LiverV13_Sum_cosTy3_2_imgs_cut_norm.npy  LiverV13_Sum_cosTy3_2_ksp.npy
GJEMRIS_paper/liver_phantom_data/Liver_v14_stat/: LiverV13_Sum_lowRes_ksp.npy  LiverV14_Sum_imgs_cut_norm.npy  LiverV14_Sum_lowRes_imgs.npy
GJEMRIS_paper/liver_phantom_data/WFS/: LiverMask_FOV100.npy
GJEMRIS_paper/liver_phantom_data/simulation_setup/: create_liver_phantom.ipynb
GJEMRIS_paper/liver_phantom_data/simulation_setup/DUKE_masks/: mask_Bladder.mat  mask_Bone.mat  mask_Brainstem.mat  mask_Cartilage.mat  mask_Cerebrum_grey_matter.mat  mask_Eye.mat  mask_Gastrointestinal_system.mat  mask_Heart.mat  mask_Mandible.mat  mask_Respiratory_system.mat  phantom_parameters.py
GJEMRIS_paper/liver_phantom_data/simulation_setup/fat_model/: fat_model_hamilton_liver.pickle  fat_model_ren_marrow.pickle  parameter_maps.npy
GJEMRIS_paper/mri_artifacts_data/1.CS_EPI/: brain_slice45.h5  epi_forEx1.xml  signals_CSinEPI_ex1_DP.h5  signals_CSinEPI_ex1_MPI.h5  signals_CSinEPI_ex1_MPI_ismrmrd.h5  signals_CSinEPI_ex1_SP.h5  signals_ex1_MPI_2.h5  simu_ex1.xml
GJEMRIS_paper/mri_artifacts_data/2.nonLinGrads/: gre_forEx2.xml  signals_ex2_gpu.h5  simu_ex2.xml
GJEMRIS_paper/mri_artifacts_data/3.trueFISP_band/: brain_slice45_2.h5  signals_2Atoms_mRx_2mln_Ty10.h5  signals_ex3_MPI_2.h5  signals_ex3_cpu_test.h5  signals_ex3_gpu.h5  signals_ex3_gpuDP_test.h5  signals_ex3_gpuDP_test_NOrng.h5  signals_ex3_gpuDP_test_NoPOs.h5  signals_ex3_gpuSP.h5  signals_ex3_gpuSP_2.h5  signals_ex3_mpi.h5  signals_gpu_1.h5  signals_gpu_2.h5  signals_gpu_3.h5  signals_mpi_1.h5  signals_mpi_2.h5  signals_mpi_3.h5  signals_mpi_test.h5  simu_ex3.xml  trueFISP_forEx3.xml
GJEMRIS_paper/mri_artifacts_data/4.SE_longRefoc/: SE_forEx4.xml  signals_ex4_MPI_2.h5  signals_ex4_gpuDP.h5  signals_ex4_gpuSP.h5  signals_ex4_gpuSP_2.h5  signals_ex4_mpi.h5  simu_ex4.xml
GJEMRIS_paper/speed_benchmark_data/: signals_2Atoms_uni_2K_GJv4.2.h5  signals_2Atoms_uni_2mln_GJv4.2.h5  signals_2Atoms_uni_2mln_v2.9MPI24.h5  signals_FS_ellips_mRx_2K_AllTy10_GJv4.2SP.h5  signals_FS_ellips_mRx_2K_AllTy10_GJv4.2_v2.9SP_3.h5  signals_FS_ellips_mRx_2K_AllTy10_GJv4.2_v2.9_3.h5  signals_FS_ellips_mRx_2K_AllTy10_GJv4.2_v2.9_new.h5  signals_FS_ellips_mRx_2K_AllTy10_v2.9MPI24.h5  signals_FS_ellips_mRx_2M_AllTy10_GJv4.2.h5  signals_FS_ellips_mRx_2M_AllTy10_GJv4.2_new.h5  signals_FS_ellips_mRx_2M_AllTy10_GJv4.2_v2.9_2.h5  signals_FS_ellips_mRx_2M_AllTy10_v2.9MPI24.h5  signals_FS_ellips_mRx_2M_AllTy10_v2.9MPI24_1.h5  signals_FS_ellips_mRx_2M_AllTy10_v2.9MPI24_2 copy.h5  signals_FS_ellips_mRx_N500_AllTy10GJv4.2SP.h5  signals_FS_ellips_mRx_N500_AllTy10_GJv4.2_v2.9SP_3.h5  signals_FS_ellips_mRx_N500_AllTy10_GJv4.2_v2.9_2.h5  signals_FS_ellips_mRx_N500_GJv4.2_v2.9_2.h5  signals_FS_ellips_mRx_N500_GJv4.2_v2.9_3.h5  signals_FS_ellips_mRx_N50_AllTy10_GJv4.2_v2.9SP_3.h5  signals_FS_ellips_mRx_N50_AllTy10_GJv4.2_v2.9_3.h5  signals_FS_ellips_mRx_N50_AllTy10_v2.9MPI24_2.h5  signals_mRx_N500_2SE_GJ_DP_2.h5  signals_mRx_N500_2SE_GJ_DP_4.h5  signals_mRx_N500_2SE_GJ_DP_5.h5
GJEMRIS_paper/src/: utils.py
cmake/: FindSundials.cmake
docker/: Dockerfile_DP.dockerfile
src/: AtomicSequence.cpp  Bloch_CV_Model.cpp  Bloch_CV_Model.h  CMakeLists.txt  Coil.cpp  Coil.h  CoilArray.cpp  CoilArray.h  CoilPrototypeFactory.cpp  CoilPrototypeFactory.h  CudaKernels.cu  CudaKernels.cuh  Declarations.h  GradPulse.cpp  GradPulse.h  Model.cpp  Model.h  RFPulse.cpp  Sample.cpp  Sample.h  Simulator.cpp  Simulator.h  TrajectoryFlow.cpp  TrajectoryInterface.h  TrajectoryKernels.cu  TrajectoryKernels.cuh  TrajectoryMotion.cpp  TrajectoryMotion.h  World.cpp  World.h  jemris.cpp  sanityck.cpp
